@@ -3,6 +3,7 @@ Dosage 1.10 (released xx.xx.2013)
 Features:
 - comics: Added SequentialArt comic strip.
 - comics: Added VampireCheerleader comic strip.
+- comics: Added GrrlPower comic strip.
 
 Fixes:
 - comics: Fixed Gunnerkrigcourt comic strip.
